[Retrace] Look for line positions before overloaded positions
Change-Id: I98a5afa82a8a5080a89f3057bdc2beff662d9620